fixed nav bar not showing at the top

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,13 @@ html, body {
     justify-content:space-between;
     align-items: center; 
     background-color: white;
+    top: 0;
 }
 #nav-bar{
 }
 .header img{
     height: 125px;
+
 }
 .links{
     display: flex;
